Every cell in the notebook runs free of error. Putting a fork in this for now

--- a/Code/ShineDalgarnoAnalysis.ipynb
+++ b/Code/ShineDalgarnoAnalysis.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note to users:\n",
+    "This notebook / repo was intended to be provided to users to check the analysis of the Hockenberry et al. (2017) Open Biology paper. In its current form it serves that purpose.\n",
+    "\n",
+    "That being said, it's not exactly clean or really intended as a platform for extensions and analysis of novel datasets. More accurately, this code / these notebooks became a leviathan of just trying to cram everything into the right sized figures to carry the paper across the finish line. This paper was a discovery paper and not a tool, so all of the functions are in here and usable but they're buried within these libraries and not exactly clean. Feel free to email me if you'd like to actually analyze new datasets and I can provide you with a 1000x nicer notebook/set of functions to perform a basic analysis on your dataset of interest. Unfortunately the figures for an actual paper always get messier / more complex so much in this notebook might not be entirely useful for individuals. \n",
+    "\n",
+    "Also as of the last update to these notebooks, where I've ensured that everything runs properly and free of errors, I've noticed that this notebook makes pretty poor figures that need some adjustments to legends, axes, etc owing to updates undoubtedly in statsmodels, matplotlib, etc. Apologies but I leave this as an exercise to the user to debug if they want cleanliness. This notebook was created for openness and reproducibility only.\n",
+    "\n",
+    "**I stress, however, that if you want to use this type of analysis in any future work please reach out to me and I'd be ecstatic to collaborate and/or provide you with more up-to-date, readable, and user-friendly code that will be geared towards your specific dataset and present a cleaner analysis for those purposes. That code is not written but my familiarity and interest in this project is such that it could probably be done in a few hours or days at most.**\n",
+    "\n",
+    "\n",
+    "--Adam J Hockenberry"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Some ipython magic to make life a bit easier"
    ]
   },
@@ -37,7 +54,9 @@
    "source": [
     "import Shine_Dalgarno_library\n",
     "import json\n",
-    "import glob"
+    "import glob\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -64,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, you can comment / uncomment your datasets at will according to which data you'd like to analyze"
+    "Next, you can comment / uncomment your datasets at will according to which data you'd like to analyze. These aSD extensions were tuned to the organism so if you do not select a valid organism-specific aSD sequence at any point you'll probably get errors. Fragment binding energies for shorter aSD seqs will work for all possible x-mers but for the longer aSD seqs I only computed those necessary to evaluate the specific organisms of interest. I.e. AUCACCUCCUUUCU will not work for E. coli because the E. coli tail is CCUCCUUA..."
    ]
   },
   {
@@ -92,8 +111,7 @@
     "# teff_file = '../Data/Buskirk2_teff.json'\n",
     "mfe_file = '../Data/cis_structure_files/oldEcoli_MFE.json'\n",
     "genome_file = '../Data/genomes/oldEcoli.gb'\n",
-    "asd_extensions_3_prime = ['-CCUCC.txt', '-CCUCCU.txt', '-CCUCCUU.txt', '-CCUCCUUU.txt',\\\n",
-    "           '-CCUCCUUUC.txt', '-CCUCCUUUCU.txt', '-CCUCCUUUCUA.txt', '-CCUCCUUUCUAA.txt', '-CCUCCUUUCUAAG.txt']#For C. crescentus\n",
+    "asd_extensions_3_prime = ['-CCUCC.txt', '-CCUCCU.txt', '-CCUCCUU.txt', '-CCUCCUUA.txt', '-CCUCCUUAC.txt']#For E. coli\n",
     "asd_extensions_varied = ['-GAUCACCUCCUUA.txt', '-AUCACCUCCUUA.txt', '-UCACCUCCUUA.txt', '-CACCUCCUUA.txt', '-ACCUCCUUA.txt','-CCUCCUUA.txt',\\\n",
     "           '-GAUCACCUCCUUAC.txt', '-AUCACCUCCUUAC.txt',  '-UCACCUCCUUAC.txt', '-CACCUCCUUAC.txt', '-ACCUCCUUAC.txt','-CCUCCUUAC.txt']\n",
     "\n",
@@ -102,7 +120,7 @@
     "# mfe_file = '../Data/cis_structure_files/bacillus_MFE.json'\n",
     "# genome_file = '../Data/genomes/bacillus.gb'\n",
     "# asd_extensions_3_prime = ['-CCUCC.txt', '-CCUCCU.txt', '-CCUCCUU.txt', '-CCUCCUUU.txt',\\\n",
-    "#            '-CCUCCUUUC.txt', '-CCUCCUUUCU.txt', '-CCUCCUUUCUA.txt', '-CCUCCUUUCUAA.txt', '-CCUCCUUUCUAAG.txt']#For C. crescentus\n",
+    "#            '-CCUCCUUUC.txt', '-CCUCCUUUCU.txt', '-CCUCCUUUCUA.txt', '-CCUCCUUUCUAA.txt', '-CCUCCUUUCUAAG.txt']#For B. subtilis\n",
     "# asd_extensions_varied = ['-GAUCACCUCCUUU.txt', '-AUCACCUCCUUU.txt', '-UCACCUCCUUU.txt', '-CACCUCCUUU.txt', '-ACCUCCUUU.txt', '-CCUCCUUU.txt',\\\n",
     "#            '-GAUCACCUCCUUUC.txt', '-AUCACCUCCUUUC.txt', '-UCACCUCCUUUC.txt', '-CACCUCCUUUC.txt', '-ACCUCCUUUC.txt', '-CCUCCUUUC.txt',\\\n",
     "#            '-GAUCACCUCCUUUCU.txt', '-AUCACCUCCUUUCU.txt', '-UCACCUCCUUUCU.txt', '-CACCUCCUUUCU.txt', '-ACCUCCUUUCU.txt', '-CCUCCUUUCU.txt',\\\n",
@@ -194,9 +212,10 @@
    "outputs": [],
    "source": [
     "energy_base = '../Data/energy_dictionaries/json-energyRef-'\n",
-    "asd_of_interest = 'UCACCUCCUUUCU' \n",
+    "asd_of_interest = 'ACCUCCUUA' \n",
     "ending = '.txt'\n",
     "energy_file = energy_base + asd_of_interest + ending\n",
+    "print(energy_file)\n",
     "\n",
     "spacing_list = list(range(1, 15))\n",
     "Shine_Dalgarno_library.compare_first_and_third_degree(trans_eff_dict_structure,\\\n",
@@ -325,22 +344,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# That was the basic analysis / work flow that was presented in the paper. Below I'll step through a few other figures\n",
-    "\n",
-    "Note: If you're reading this from github these files currently are not-included but email me to pressure me to finish cleaning this file up :0)"
+    "# That was the basic analysis / work flow that was the main point of the paper. Below I'll step through a few other figures that might be useful including analyses of non-ribosomal profiling datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis of the Taniguchi et al data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "teff_file_list = ['./teff_all.json', './teff_80.json', './teff_60.json', './teff_40.json', './teff_20.json']\n",
+    "###These translation efficiency dictionaries were derived from Taniguchi et al. with the files demarcated\n",
+    "###as _xxx meaning the x% lowest signal to noise datset. I.e. teff_20.json is the translation efficiencies\n",
+    "###of the 20% of genes from this dataset with the highest confidence translation efficiency measurements\n",
+    "###not necessarily the highest\n",
+    "teff_file_list = ['teff_all.json', 'teff_80.json', 'teff_60.json', 'teff_40.json', 'teff_20.json']\n",
+    "teff_file_list = ['../Data/taniguchi_data/'+i for i in teff_file_list]\n",
     "\n",
-    "genome_file = '../../RibosomeProfiling/Data/oldEcoli.gb'\n",
+    "genome_file = '../Data/genomes/oldEcoli.gb'\n",
     "organism_name = 'Escherichia_taniguchi'\n",
     "\n",
     "seq_dict, five_prime_seq_dict, three_prime_seq_dict = Shine_Dalgarno_library.get_seq_dicts(genome_file)\n",
@@ -362,11 +392,14 @@
     "            to_delete.append(gene)\n",
     "    for gene in to_delete:\n",
     "        del trans_eff_dict[gene]\n",
-    "    mfeDict = Shine_Dalgarno_library.get_structure(seq_dict, five_prime_seq_dict, trans_eff_dict)\n",
-    "    trans_eff_dict_structure = Shine_Dalgarno_library.teff_given_structure(trans_eff_dict, mfeDict, organism_name, save_file=False)    \n",
+    "    \n",
+    "    with open('../Data/cis_structure_files/oldEcoli_MFE.json') as infile:\n",
+    "        mfe_dict = json.load(infile) \n",
+    "    \n",
+    "    trans_eff_dict_structure = Shine_Dalgarno_library.teff_given_structure(trans_eff_dict, mfe_dict)    \n",
     "    \n",
     "    \n",
-    "    energy_base = '/home/visitors/hockenberry/Projects/TransInteractions/Data/json-energyRef-'\n",
+    "    energy_base = '../Data/energy_dictionaries/json-energyRef-'\n",
     "    asd_of_interest = 'ACCUCCUUA'\n",
     "    ending = '.txt'\n",
     "    energy_file = energy_base + asd_of_interest + ending\n",
@@ -375,9 +408,7 @@
     "    flexibility = 0\n",
     "    spacing = -5\n",
     "\n",
-    "\n",
-    "    temp_1, temp_3, percent_increase = Shine_Dalgarno_library.plot_individual(trans_eff_dict_structure, five_prime_seq_dict, seq_dict, energy_file, spacing, flexibility,\\\n",
-    "                                           save_file=True, organism=organism_name)\n",
+    "    temp_1, temp_3, percent_increase, df = Shine_Dalgarno_library.plot_individual(trans_eff_dict_structure, five_prime_seq_dict, seq_dict, energy_file, spacing)\n",
     "    first_order_r2.append(temp_1.rsquared_adj)\n",
     "    third_order_r2.append(temp_3.rsquared_adj)\n",
     "    percent_increase_list.append(percent_increase)"
@@ -391,6 +422,7 @@
    },
    "outputs": [],
    "source": [
+    "####All this information is vomited out above if you can find it but here it is if you're interested\n",
     "print(first_order_r2)\n",
     "print(third_order_r2)\n",
     "print(percent_increase_list)"
@@ -405,7 +437,7 @@
    "outputs": [],
    "source": [
     "x_labels = ['', 'All data\\n (n=1014)', 'Top 80\\%\\n(n=811)', 'Top 60\\%\\n(n=611)', 'Top 40\\%\\n(n=407)', 'Top 20\\%\\n(n=204)']\n",
-    "Shine_Dalgarno_library.plot_taniguchi_data(first_order_r2, third_order_r2, percent_increase_list, x_labels, save_file=False)"
+    "Shine_Dalgarno_library.plot_taniguchi_data(first_order_r2, third_order_r2, percent_increase_list, x_labels)"
    ]
   },
   {
@@ -416,6 +448,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis of the Kosuri et al data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -423,7 +462,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../Data/kosuri_data.xls')"
+    "df = pd.read_excel('../Data/kosuri_data/kosuri_data.xls')"
    ]
   },
   {
@@ -454,7 +493,7 @@
    },
    "outputs": [],
    "source": [
-    "energy_file = '/home/visitors/hockenberry/Projects/TransInteractions/Data/json-energyRef-ACCUCCUUA.txt'\n",
+    "energy_file = '../Data/energy_dictionaries/json-energyRef-ACCUCCUUA.txt'\n",
     "with open(energy_file) as infile:\n",
     "    energy_dict = json.load(infile)\n",
     "    \n",
@@ -513,13 +552,14 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Operon analysis\n",
+    "This is hacky / kind of incomplete but it basically just will give you back a \"trans_eff_dict\" limited by the operon positions that you want and you can then run this trans_eff_dict through whichever analysis listed above including correcting for structure, etc and perform an analysis split according to operon."
+   ]
   },
   {
    "cell_type": "code",
@@ -529,12 +569,24 @@
    },
    "outputs": [],
    "source": [
-    "# # # with open('../../RibosomeProfiling/Data/operonDict20nt.json') as infile:\n",
-    "# # #     operonDict = json.load(infile)\n",
+    "with open(teff_file) as infile:\n",
+    "    trans_eff_dict = json.load(infile)\n",
+    "print(\"Number of genes with teff data:\", len(trans_eff_dict.keys()))\n",
     "\n",
-    "# df = pd.read_csv('/home/visitors/hockenberry/Desktop/ccrescentus_DOOR_operons.csv', sep='\\t', index_col='id')\n",
-    "# df = pd.read_csv('/home/visitors/hockenberry/Desktop/bsub_DOOR_operons.csv', sep='\\t', index_col='id')\n",
-    "df = pd.read_csv('/home/visitors/hockenberry/Desktop/ecoli_DOOR_operons.csv', sep='\\t', index_col='id')\n",
+    "to_delete = []\n",
+    "for gene in trans_eff_dict:\n",
+    "    if gene not in seq_dict:\n",
+    "        to_delete.append(gene)\n",
+    "for gene in to_delete:\n",
+    "    del trans_eff_dict[gene]\n",
+    "print(\"Number of genes with teff data (after some processing):\", len(trans_eff_dict.keys()))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# df = pd.read_csv('../Data/operons/ccrescentus_DOOR_operons.csv', sep='\\t', index_col='id')\n",
+    "# df = pd.read_csv('../Data/operons/bsub_DOOR_operons.csv', sep='\\t', index_col='id')\n",
+    "df = pd.read_csv('../Data/operons/ecoli_DOOR_operons.csv', sep='\\t', index_col='id')\n",
     "operonDict = {}\n",
     "for index in df.index:\n",
     "    for number, synonym in enumerate(df.loc[index]['synonyms'].split(';')):\n",
@@ -551,8 +603,8 @@
     "for gene in list(trans_eff_dict.keys()):\n",
     "    if gene not in operonDict.keys():\n",
     "        del trans_eff_dict[gene]\n",
-    "#     elif operonDict[gene] != 'First':\n",
-    "    elif operonDict[gene] != 'Late':\n",
+    "    elif operonDict[gene] != 'First': #####Choose/toggle operon positions here\n",
+    "#     elif operonDict[gene] != 'Late': ######And here\n",
     "        del trans_eff_dict[gene]\n",
     "print(len(trans_eff_dict.keys()))\n",
     "\n",
@@ -564,136 +616,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "mers_11 = []\n",
-    "mers_12 = []\n",
-    "mers_13 = []\n",
-    "trash, fivePrime, trash = Shine_Dalgarno_library.get_seq_dicts(genome_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(1):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for gene in fivePrime.keys():\n",
-    "    tempSeq = fivePrime[gene][15:].replace('T', 'U')\n",
-    "    for event in range(len(tempSeq)-11):\n",
-    "        mers_11.append(tempSeq[event:event+11])\n",
-    "    for event in range(len(tempSeq)-12):\n",
-    "        mers_12.append(tempSeq[event:event+12])\n",
-    "    for event in range(len(tempSeq)-13):\n",
-    "        mers_13.append(tempSeq[event:event+13])\n",
-    "mers_11 = list(set(mers_11))\n",
-    "mers_12 = list(set(mers_12))\n",
-    "mers_13 = list(set(mers_13))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(len(mers_11), len(mers_12), len(mers_13))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "with open('../Data/11mers_bs.json', 'w') as outfile:\n",
-    "    json.dump(mers_11, outfile)\n",
-    "with open('../Data/12mers_bs.json', 'w') as outfile:\n",
-    "    json.dump(mers_12, outfile)\n",
-    "with open('../Data/13mers_bs.json', 'w') as outfile:\n",
-    "    json.dump(mers_13, outfile)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "np.exp(-0.4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# genome_file = '../../RibosomeProfiling/Data/NA1000_JMS.gbk'\n",
-    "# genome_file = '../../RibosomeProfiling/Data/oldEcoli.gb'\n",
-    "genome_file = '../../RibosomeProfiling/Data/bacillus.gb'\n",
-    "\n",
-    "\n",
-    "mers_14 = []\n",
-    "mers_15 = []\n",
-    "trash, fivePrime, trash = Shine_Dalgarno_library.get_seq_dicts(genome_file)\n",
-    "for gene in fivePrime.keys():\n",
-    "    tempSeq = fivePrime[gene][15:].replace('T', 'U')\n",
-    "    for event in range(len(tempSeq)-14):\n",
-    "        mers_14.append(tempSeq[event:event+14])\n",
-    "    for event in range(len(tempSeq)-15):\n",
-    "        mers_15.append(tempSeq[event:event+15])\n",
-    "\n",
-    "mers_14 = list(set(mers_14))\n",
-    "mers_15 = list(set(mers_15))\n",
-    "print(len(mers_14), len(mers_15))\n",
-    "import json\n",
-    "with open('../Data/14mers_bs.json', 'w') as outfile:\n",
-    "    json.dump(mers_14, outfile)\n",
-    "with open('../Data/15mers_bs.json', 'w') as outfile:\n",
-    "    json.dump(mers_15, outfile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
